add api get request details, update api get all requests to support filter and paging
