# services/api-service/deployment-requests.service.ts
@@ -3,7 +3,7 @@
 'use strict';
 import { Service, Action } from '@ourparentcenter/moleculer-decorators-extended';
 import { dbDeploymentRequestsMixin } from '../../mixins/dbMixins';
-import { DeploymentRequest, getActionConfig, GetRequestsParams, MainnetUploadStatus, MoleculerDBService, RestOptions, UpdateRequestDeploymentParams, UpdateRequestParams } from '../../types';
+import { DeploymentRequest, getActionConfig, GetRequestsParams, ListRequestsParams, MainnetUploadStatus, MoleculerDBService, RestOptions, UpdateRequestDeploymentParams, UpdateRequestParams } from '../../types';
 import { DeploymentRequests } from 'entities';
 import { Context } from 'moleculer';
 
@@ -30,8 +30,25 @@ export default class DeploymentRequestsService extends MoleculerDBService<
 	@Action({
 		name: 'getAll',
 	})
-	async getAll() {
-		const result = await this.adapter.find({});
+	async getAll(ctx: Context<ListRequestsParams>) {
+		let query = `
+			SELECT * FROM ( 
+				SELECT *, GROUP_CONCAT(DISTINCT CONCAT(euphoria_code_id,',',mainnet_code_id) SEPARATOR ' | ') AS code_ids 
+				FROM deployment_requests 
+				GROUP BY request_id) dr
+		`;
+		if ((ctx.params.status && ctx.params.status !== '') || (ctx.params.requester_address && ctx.params.requester_address !== '')) {
+			query += `WHERE `;
+			if (ctx.params.status && ctx.params.status !== '') 
+				query += `status = '${ctx.params.status}'`;
+			if (ctx.params.requester_address && ctx.params.requester_address !== '') {
+				if (ctx.params.status && ctx.params.status !== '') query += ` AND `;
+				query += `requester_address = '${ctx.params.requester_address}'`;
+			}
+		}
+		query += ` LIMIT ${ctx.params.limit} OFFSET ${ctx.params.offset};`;
+		// @ts-ignore
+		const result = await this.adapter.db.query(query, { type: 'SELECT' });
 		return result;
 	}
 
@@ -39,12 +56,15 @@ export default class DeploymentRequestsService extends MoleculerDBService<
 		name: 'getRequests',
 	})
 	async getRequests(ctx: Context<DeploymentRequest>) {
-		const result = await this.adapter.find({
-			query: {
-				request_id: ctx.params.request_id,
-			},
-		});
-		return result;
+		// @ts-ignore
+		const result = await this.adapter.db.query(`
+			SELECT * FROM ( 
+				SELECT *, GROUP_CONCAT(DISTINCT CONCAT(euphoria_code_id,',',mainnet_code_id) SEPARATOR ' | ') AS code_ids 
+				FROM deployment_requests 
+				GROUP BY request_id) dr 
+			WHERE request_id = ${ctx.params.request_id};
+		`, { type: 'SELECT' });
+		return result[0];
 	}
 
 	@Action({
